--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ addons:
 
 script:
   - docker build --pull -t fretlink/nix .
-  - docker run -it --rm fretlink/nix nix-channel --list
-  - docker run -it --rm fretlink/nix sh -l -c 'nix-env -iA nixpkgs.hello && test "$(hello)" = "Hello, world!"'
+  - docker run -it --rm fretlink/nix 'nix-channel --list'
+  - docker run -it --rm fretlink/nix 'nix-env -iA nixpkgs.hello && test "$(hello)" = "Hello, world!"'
