chore(nix-channel): upgrade from 18.09 to 19.03 and add special `unstable`

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -27,8 +27,9 @@ RUN echo ". ${ENV}" >> ${HOME}/.profile
 # All subsequent "RUN" will use a login shell
 SHELL ["/usr/bin/env", "bash", "-l", "-c"]
 
-RUN nix-channel --add https://nixos.org/channels/nixpkgs-18.09-darwin nixpkgs \
-  && nix-channel --update
+RUN nix-channel --add https://nixos.org/channels/nixpkgs-19.03-darwin nixpkgs \
+    && nix-channel --add https://nixos.org/channels/nixpkgs-unstable unstable \
+    && nix-channel --update
 
 # Propagate UTF8
 # https://github.com/NixOS/nix/issues/599#issuecomment-153885553
