--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -2,7 +2,7 @@
 FROM alpine
 
 ARG NIX_VERSION
-ENV NIX_VERSION ${NIX_VERSION:-2.2.1}
+ENV NIX_VERSION ${NIX_VERSION:-2.3.1}
 ARG LANG
 ENV LANG ${LANG:-"en_US.UTF-8"}
 
@@ -10,7 +10,7 @@ RUN addgroup -g 30000 -S nixbld \
     && for i in $(seq 1 30); do adduser -S -D -h /var/empty -g "Nix build user $i" -u $((30000 + i)) -G nixbld nixbld$i ; done \
     && adduser -D nixuser \
     && mkdir -m 0755 /nix && chown nixuser /nix \
-    && apk add --no-cache bash \
+    && apk add --no-cache bash xz \
     && rm -rf /var/cache/apk/* \
     # sandboxing enabled by default since 2.2
     && mkdir -p /etc/nix && echo 'sandbox = false' > /etc/nix/nix.conf
@@ -19,8 +19,8 @@ USER nixuser
 ENV USER=nixuser
 ENV HOME="/home/nixuser"
 
-RUN cd && wget https://nixos.org/releases/nix/nix-$NIX_VERSION/nix-$NIX_VERSION-x86_64-linux.tar.bz2 \
-    && tar xjf nix-*-x86_64-linux.tar.bz2 \
+RUN cd && wget https://nixos.org/releases/nix/nix-$NIX_VERSION/nix-$NIX_VERSION-x86_64-linux.tar.xz \
+    && tar xJf nix-*-x86_64-linux.tar.xz \
     && ~/nix-*-x86_64-linux/install \
     && rm -rf ~/nix-*-*
 
@@ -29,7 +29,7 @@ RUN echo ". ${ENV}" >> ${HOME}/.profile
 # All subsequent "RUN" will use a login shell
 SHELL ["/usr/bin/env", "bash", "-l", "-c"]
 
-RUN nix-channel --add https://nixos.org/channels/nixpkgs-19.03-darwin nixpkgs \
+RUN nix-channel --add https://nixos.org/channels/nixpkgs-19.09-darwin nixpkgs \
     && nix-channel --add https://nixos.org/channels/nixpkgs-unstable unstable \
     && nix-channel --update
 
