--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -2,7 +2,7 @@
 FROM debian:stable-slim
 
 ARG NIX_VERSION
-ENV NIX_VERSION ${NIX_VERSION:-2.2.1}
+ENV NIX_VERSION ${NIX_VERSION:-2.3.1}
 ARG LANG
 ENV LANG ${LANG:-"en_US.UTF-8"}
 
@@ -10,7 +10,7 @@ RUN addgroup --gid 30000 --system nixbld \
     && for i in $(seq 1 30); do adduser --system --disabled-password --home /var/empty --gecos "Nix build user $i" --uid $((30000 + i)) --ingroup nixbld nixbld$i ; done \
     && adduser --disabled-password nixuser \
     && mkdir -m 0755 /nix && chown nixuser /nix \
-    && apt update && apt install -y wget bzip2 \
+    && apt update && apt install -y wget xz-utils \
     && apt clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     # sandboxing enabled by default since 2.2
     && mkdir -p /etc/nix && echo 'sandbox = false' > /etc/nix/nix.conf
@@ -19,8 +19,8 @@ USER nixuser
 ENV USER=nixuser
 ENV HOME="/home/nixuser"
 
-RUN cd && wget https://nixos.org/releases/nix/nix-$NIX_VERSION/nix-$NIX_VERSION-x86_64-linux.tar.bz2 \
-    && tar xjf nix-*-x86_64-linux.tar.bz2 \
+RUN cd && wget https://nixos.org/releases/nix/nix-$NIX_VERSION/nix-$NIX_VERSION-x86_64-linux.tar.xz \
+    && tar xJf nix-*-x86_64-linux.tar.xz \
     && ~/nix-*-x86_64-linux/install \
     && rm -rf ~/nix-*-*
 
@@ -29,7 +29,7 @@ RUN echo ". ${ENV}" >> ${HOME}/.profile
 # All subsequent "RUN" will use a login shell
 SHELL ["/usr/bin/env", "bash", "-l", "-c"]
 
-RUN nix-channel --add https://nixos.org/channels/nixpkgs-19.03-darwin nixpkgs \
+RUN nix-channel --add https://nixos.org/channels/nixpkgs-19.09-darwin nixpkgs \
     && nix-channel --add https://nixos.org/channels/nixpkgs-unstable unstable \
     && nix-channel --update
 
