--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ matrix:
     - env: BASE_OS=debian
 
 script:
-  - docker build --pull -t fretlink/nix ${BASE_OS}/
+  - docker build --pull -t fretlink/nix -f ${BASE_OS}/Dockerfile .
   - docker run -it --rm fretlink/nix 'nix-channel --list'
   - docker run -it --rm fretlink/nix 'nix-env -iA nixpkgs.hello && test "$(hello)" = "Hello, world!"'
